--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- Vite will automatically inject the bundled scripts here during build -->
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
