--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/png" href="/src/assets/beesbridgefavicon32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beesbridge LLC</title>
+    <script>
+      // Redirect to HTTPS if currently on HTTP
+      if (window.location.protocol === 'http:' && window.location.hostname !== 'localhost') {
+        window.location.href = window.location.href.replace('http:', 'https:');
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
